@@ -242,6 +242,8 @@ MainWindow.8=Scan
 MainWindow.9=Rename
 MainWindow.10=Clean up
 MainWindow.14=Compress
+MainWindow.markAsOwned=Mark as owned
+MainWindow.markAsNotOwned=Mark as NOT owned
 GameListTableModel.3=Title
 ShowAboutAction.2=\nDevelopped by Pierre Chastagner\n\nThanks to t4ils for his support :)\nGerman translation : IsSuE_\nDutch translation: Maikel Steneker\n\nGo to http://code.google.com/p/rofage/ for :\n- Getting the latest version,\n- Report a bug,\n- Ask for a new feature\n- or consult/contribute to the wiki\n\nUses librairies\n- jDOM (http://www.jdom.org/)\n- TrueZip (https://truezip.dev.java.net/)\n- SwingFX (https://swingfx.dev.java.net/)
 GameListSelectionListener.3=Release : 
@@ -303,3 +305,4 @@ IconHelper.9=Owned rom, name incorrectly
 IconHelper.11=Rom not found
 IconHelper.15=Modified rom (trimmed, patched or incorrect)
 IconHelper.17=Clean rom
+IconHelper.ownedRom=A rom that you have manually marked as "Owned"
